--- a/style/style.css
+++ b/style/style.css
@@ -193,6 +193,11 @@ footer p {
   color:                #2f79b9;
 }
 
+.twitter {
+  margin-left:          100px;
+  margin-top:           100px;
+}
+
 @media (max-width: 500px) {
 
     .intro {
